2015-02-13  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17569]
	* sysdeps/ieee754/dbl-64/wordsize-64/s_remquo.c (__remquo):
	Compute absolute value of x as modified by fmod, not original
	value of x.
	* math/libm-test.inc (RUN_TEST_ffI_f1): Rename to
	RUN_TEST_ffI_f1_mod8.  Check extra return value mod 8.
	(RUN_TEST_LOOP_ffI_f1): Rename to RUN_TEST_LOOP_ffI_f1_mod8.  Call
	RUN_TEST_ffI_f1_mod8.
	(remquo_test_data): Add more tests.

2015-02-13  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/init_array/pt-crti.S: New file.

2015-02-13  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17967]
	* sysdeps/powerpc/fpu/e_sqrtf.c (__slow_ieee754_sqrtf): Use
	__builtin_fmaf instead of relying on contraction of a * b + c.

2015-02-12  J William Piggott  <elseifthen@gmx.com>

	[BZ #17969]
	* manual/time.texi: correct the zoneinfo path in the TZ Variable
	node.

2015-02-12  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17964]
	* sysdeps/powerpc/fpu/e_sqrt.c (__slow_ieee754_sqrt): Use
	__builtin_fma instead of relying on contraction of a * b + c.

2015-02-12  Roland McGrath  <roland@hack.frob.com>

	* Makeconfig (ASFLAGS): Add -Werror=undef.
	* sysdeps/arm/Versions (libc: GLIBC_2.19): New (empty) version set.
	* sysdeps/unix/make-syscalls.sh: Always emit #define's for
	SYSCALL_CANCELLABLE, SYSCALL_NOERRNO, SYSCALL_ERRVAL, to 1 or 0.

	* Makeconfig (after-link): New variable.
	(+link-pie, +link-pie-tests): Use it.
	(+link-static, +link-static-tests): Likewise.
	(+link, +link-tests): Likewise.
	* Makerules (build-module, build-module-asneeded): Likewise.
	(lib%.so, $(common-objpfx)libc.so, $(common-objpfx)linkobj/libc.so):
	Likewise.
	* elf/Makefile ($(objpfx)ld.so): Likewise.

2015-02-12  Rüdiger Sonderfeld  <ruediger@c-plusplus.net>

	[BZ #17965]
	* manual/time.texi (Elapsed Time): tv_sec is of type time_t in
	both struct timeval and struct timespec.

2015-02-12  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16560]